# Trabalho_c-Python

./: README.md
Mercado/: CMakeLists.txt  READ ME.txt
Mercado/Mercado/: CMakeLists.txt  Mercado.cpp  Mercado.h
